--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,10 @@ jobs:
         uses: ayeressian/bunnycdn-storage-deploy@master
         with:
           source: "e2e/test-dir"
-          storageZoneName: "${{ secrets.STORAGE_NAME_TEST }}"
-          storagePassword: "${{ secrets.STORAGE_PASSWORD_TEST }}"
-          accessKey: "${{ secrets.ACCESS_KEY_TEST }}"
-          pullZoneId: "${{ secrets.ZONE_ID_TEST }}"
+          storageZoneName: "${{ secrets.STORAGE_NAME }}"
+          storagePassword: "${{ secrets.STORAGE_PASSWORD }}"
+          accessKey: "${{ secrets.ACCESS_KEY }}"
+          pullZoneId: "${{ secrets.ZONE_ID }}"
           upload: "true"
           remove: "true"
           purgePullZone: "true"
